--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 </head>
 <body>
     <nav id="nav">
+        <div class="container">
 
+        </div>
     </nav>
     <div class="outer-container">
-        <div id="main" style="height: 3000px">
+        <div id="main" class="main">
 
         </div>
     </div>
 </body>
 <script src="js/utils.js"></script>
+<script src="js/helpers/dom.helper.js"></script>
 <script src="js/services/web.service.js"></script>
 <script src="js/managers/nav.manager.js"></script>
+<script src="js/controllers/abstract.controller.js"></script>
 <script src="js/controllers/home.controller.js"></script>
 </html>
