--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="css/global.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css" rel="stylesheet" />
     <script>
         let nav = undefined;
         let cont = undefined;
@@ -10,18 +12,30 @@
         window.onload = function () {
             console.log(Controllers);
             AssetHelper.instance.fetchAssets(Services.WebService);
+            cont = new Managers.ControllerManager();
             nav = new Managers.NavManager((controller) => {
                cont.switchController(controller);
+            }, () => {
+                cont.goBack();
             });
-            cont = new Managers.ControllerManager();
+
+            cont.setOnSwitchEvents(() => {
+               nav.showButtons();
+            }, () => {
+                nav.hideButtons();
+            });
+
             cont.switchController('home');
+            nav.setEvents();
         };
     </script>
     <title>Richard Grable</title>
 </head>
 <body>
     <nav>
-        <div id="nav" class="container"></div>
+        <div id="nav" class="container">
+            <i id="close" class="fa fa-close"></i>
+        </div>
     </nav>
     <div class="outer-container">
         <div id="main" class="main"></div>
@@ -36,9 +50,12 @@
 <script src="js/managers/nav.manager.js"></script>
 <script src="js/managers/controller.manager.js"></script>
 <script src="js/views/home.view.js"></script>
+<script src="js/views/project-desc.view.js"></script>
+<script src="js/views/project.view.js"></script>
 <script src="js/views/skills.view.js"></script>
 <script src="js/controllers/abstract.controller.js"></script>
-<script src="js/controllers/about.controller.js"></script>
+<script src="js/controllers/project.controller.js"></script>
 <script src="js/controllers/skills.controller.js"></script>
 <script src="js/controllers/home.controller.js"></script>
+<script src="js/controllers/project-desc.controller.js"></script>
 </html>
